[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true


[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip="__init__.py"
use_parentheses=true

# TODO: add these back in?
known_first_party="tel_grammar"
known_third_party=["pytest", "setuptools"]
